# deep-leads

./: .gitignore  README.md  project_submission.md  pyproject.toml
notebooks/: agent_test_1.ipynb  dspy_test.ipynb  eval_results.ipynb  eval_scrapping.ipynb  synthetic_query_example.ipynb
notebooks/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
src/: types.py
src/agents/: multi_agent_pattern.py  single_agent_pattern.py
src/agents/utils/: build_final_query.py  message_processors.py
src/evals/: eval_runner.py  generate_synthetic_questions.py  human_verified_searches.py  lead_comparison.py
src/evals/utils/: lead_comparison.py
