[project]
name = "deep-leads"
version = "0.1.0"
description = "LLM Agentic Lead Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.27",
    "instructor>=1.8.3",
    "ipykernel>=6.29.5",
    "pydantic-ai[logfire]>=0.3.2",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.7",
]
