[project]
name = "deep-leads"
version = "0.1.0"
description = "LLM Agentic Lead Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=3.1.7",
    "dspy>=2.6.27",
    "instructor>=1.8.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pandas>=2.3.0",
    "pydantic-ai[logfire]>=0.3.2",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "tavily-python>=0.7.7",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
